Add html structure.

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leaderboard</title>
 </head>
 <body>
-    
+    <h1>Leaderboard</h1>
+    <section id="recent-scores-main-container">
+        <div id="recent-top">
+            <h3>Recent scores</h3>
+            <span>Refresh</span>
+        </div>
+        <ul id="scores-list">
+            <li>Name: 100</li>
+            <li>Name: 50</li>
+            <li>Name: 60</li>
+            <li>Name: 70</li>
+            <li>Name: 30</li>
+            <li>Name: 10</li>
+        </ul>
+    </section>
+    <section id="add-score-container">
+        <h3>Add your score</h3>
+        <form>
+            <input type="text" placeholder="Your name">
+            <input type="text" placeholder="Your score">
+            <input type="submit" value="Submit">
+        </form>
+    </section>
 </body>
 </html>
