--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,29 @@
 </head>
 <body>
     <h1>Leaderboard</h1>
-    <section id="recent-scores-main-container">
-        <div id="recent-top">
-            <h3>Recent scores</h3>
-            <span>Refresh</span>
-        </div>
-        <ul id="scores-list">
-            <li>Name: 100</li>
-            <li>Name: 50</li>
-            <li>Name: 60</li>
-            <li>Name: 70</li>
-            <li>Name: 30</li>
-            <li>Name: 10</li>
-        </ul>
-    </section>
-    <section id="add-score-container">
-        <h3>Add your score</h3>
-        <form>
-            <input type="text" placeholder="Your name">
-            <input type="text" placeholder="Your score">
-            <input type="submit" value="Submit">
-        </form>
-    </section>
+    <div id="main-container">
+        <section id="recent-scores-main-container">
+            <div id="recent-scores-top">
+                <h3>Recent scores</h3>
+                <span id="refresh-item">Refresh</span>
+            </div>
+            <ul id="scores-list">
+                <li class="list-element">Name: 100</li>
+                <li class="list-element">Name: 50</li>
+                <li class="list-element">Name: 60</li>
+                <li class="list-element">Name: 70</li>
+                <li class="list-element">Name: 30</li>
+                <li class="list-element">Name: 10</li>
+            </ul>
+        </section>
+        <section id="add-score-container">
+            <h3>Add your score</h3>
+            <form id="new-score-form">
+                <input type="text" placeholder="Your name">
+                <input type="text" placeholder="Your score">
+                <input id="submit-btn" type="submit" value="Submit">
+            </form>
+        </section>
+    </div>
 </body>
 </html>
